new proj/src/objects/GE_MDM_Event_Processing_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Controls the field mapping between the GE MDM - Event Processing custom object and Account standard object.</description>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <inlineHelpText>Enter the API name of the field related to the Bill To Address.</inlineHelpText>
        <label>Bill To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Bill To City.</inlineHelpText>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country_Code__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Bill To Country Code.</inlineHelpText>
        <label>Bill To Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State_Province__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Bill To State/Province.</inlineHelpText>
        <label>Bill To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Bill To Zip.</inlineHelpText>
        <label>Bill To Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_DUNS__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Child DUNS.</inlineHelpText>
        <label>Child DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Legal Name.</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Domestic_Ultimate__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Domestic Ultimate.</inlineHelpText>
        <label>DUNS Domestic Ultimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Global_Ultimate__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Global Ultimate.</inlineHelpText>
        <label>DUNS Global Ultimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Number.</inlineHelpText>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Previous__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Previous.</inlineHelpText>
        <label>DUNS Previous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_Name__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Domestic Ultimate Name.</inlineHelpText>
        <label>Domestic Ultimate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Event Date.</inlineHelpText>
        <label>Event Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Event Type.</inlineHelpText>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_DUNS__c</fullName>
        <inlineHelpText>Enter the API name of the field related to From DUNS.</inlineHelpText>
        <label>From DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Global_DUNS__c</fullName>
        <inlineHelpText>Enter the API name of the field related to the GE Global DUNS.</inlineHelpText>
        <label>GE Global DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Status__c</fullName>
        <inlineHelpText>Enter API Name of GE Status field</inlineHelpText>
        <label>GE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Name__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Global Ultimate Name.</inlineHelpText>
        <label>Global Ultimate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_ID__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Gold ID.</inlineHelpText>
        <label>Gold ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Parent_DUNS__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Parent DUNS.</inlineHelpText>
        <label>HQ Parent DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Parent_Name__c</fullName>
        <inlineHelpText>Enter the API name of the field related to HQ Parent Name.</inlineHelpText>
        <label>HQ Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <inlineHelpText>Enter the API name of the field related to the Mailing Address.</inlineHelpText>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Mailing City.</inlineHelpText>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Code__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Mailing Country Code.</inlineHelpText>
        <label>Mailing Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Mailing State/Province.</inlineHelpText>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Mailing Zip.</inlineHelpText>
        <label>Mailing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Parent Account Name or GE Account Name.</inlineHelpText>
        <label>Parent Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Parent Account Type.</inlineHelpText>
        <label>Parent Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Segment__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Parent Segment.</inlineHelpText>
        <label>Parent Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Publish Date.</inlineHelpText>
        <label>Publish Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Date_From__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Relationship Date From.</inlineHelpText>
        <label>Relationship Date From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Date_To__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Relationship Date To.</inlineHelpText>
        <label>Relationship Date To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <inlineHelpText>Enter the API name of the field related to SIC Code.</inlineHelpText>
        <label>SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <inlineHelpText>Enter the API name of the field related to the Ship To Address.</inlineHelpText>
        <label>Ship To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Ship To City.</inlineHelpText>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country_Code__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Ship To Country Code.</inlineHelpText>
        <label>Ship To Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State_Province__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Ship To State/Province.</inlineHelpText>
        <label>Ship To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Ship To Zip.</inlineHelpText>
        <label>Ship To Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_DUNS__c</fullName>
        <inlineHelpText>Enter the API name of the field related to To DUNS.</inlineHelpText>
        <label>To DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vat_Number__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Vat Number.</inlineHelpText>
        <label>Vat Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GE MDM - Event Processing Field Mapping</label>
</CustomObject>